# lcr-etl-upgrade

./: .gitignore  AGENTS.md  README.md  ingest.py  pyproject.toml  sync.py
.github/: ci.yml
docs/: qa_observations.md
tests/integration/: test_ingest_integration.py
tests/unit/: test_ingest.py  test_sync.py
