[project]
name = "lcr-etl-upgrade"
version = "0.1.0"
description = "Upgraded, test-driven PySpark ETL for Lead Custody Repository"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["black", "ruff", "pytest", "pytest-spark"]

[tool.black]
line-length = 88

[tool.ruff]
target-version = "py312"
